# slow

./: .pylintrc  README.md  asm.fasm  mypy.ini  pyproject.toml
slow/: __init__.py  _exceptions.py  node.py
slow/ast/: __init__.py  assign.py  binary.py  grouping.py  identifier.py  let.py  literal.py  node.py  program.py
slow/backend/: __init__.py  ast_asm_visitor.py  ir_visitor.py
slow/frontend/: __init__.py  lexeme.py  lexer.py  parser.py
tests/frontend/: lexer_test.py  parser_test.py
