[tool.poetry]
name = "slow"
version = "0.1.0"
description = ""
authors = ["fabiocfabini <fabiolucas.carneiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
mypy = "^1.5.1"
pylint = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
